fixed navbar and wrapper on mobile

--- a/styles/sass/_globalStyles.scss
+++ b/styles/sass/_globalStyles.scss
@@ -88,3 +88,8 @@ h2 {
         text-transform: uppercase;
     }
 
+@media (max-width: 480px) {
+    .wrapper {
+        width: 100%;
+    }
+}
