--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -226,6 +226,7 @@ header {
         }
 
         .menu-btn {
+            top: 8px;
             right: 7.5%;
         }   
     }
@@ -234,6 +235,11 @@ header {
 @media (max-width: 480px) {
 
     header {
+
+         .logo {
+            padding-left: 7.5%;
+        }
+
         h1 {
             padding-top: 10%;
             padding-bottom: 10%;
@@ -242,6 +248,10 @@ header {
 
         h2 {
             font-size: 2.8rem;
+        }
+
+        .navBar {
+            width: 100%;
         }
     }
 }
